fix leaflet not showing

--- a/frontend/react/src/App.css
+++ b/frontend/react/src/App.css
@@ -44,7 +44,7 @@ a:hover {
 	padding: 2rem;
 }
 
-.map {
+#map {
 	height: 100%;
 	width: 100%;
 }
